// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders default button correctly 1`] = `
<button
  className="button button--default"
  onClick={[Function]}
>
  Default Button
</button>
`;

exports[`Button renders disabled button correctly 1`] = `
<button
  className="button button--disabled"
  onClick={[Function]}
>
  Disabled Button
</button>
`;

exports[`Button renders disabled-light button correctly 1`] = `
<button
  className="button button--disabled-light"
  onClick={[Function]}
>
  Disabled light Button
</button>
`;

exports[`Button renders primary button correctly 1`] = `
<button
  className="button button--primary"
  onClick={[Function]}
>
  Primary Button
</button>
`;

exports[`Button renders primary outline correctly 1`] = `
<button
  className="button button--outline"
  onClick={[Function]}
>
  Outline Button
</button>
`;

exports[`Button renders secondary button correctly 1`] = `
<button
  className="button button--secondary"
  onClick={[Function]}
>
  Secondary Button
</button>
`;

exports[`Button renders selected button correctly 1`] = `
<button
  className="button button--selected button--default"
  onClick={[Function]}
>
  Selected Button
</button>
`;

exports[`Button renders transparent button correctly 1`] = `
<button
  className="button button--transparent"
  onClick={[Function]}
>
  Transparent Button
</button>
`;

exports[`Button renders warning button correctly 1`] = `
<button
  className="button button--warning"
  onClick={[Function]}
>
  Warning Button
</button>
`;
